Renamed and changed the path of \JS File\

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <canvas id="myCanvas" style="border: 2px solid black " width='800' height="500 "></canvas>
 <button id="kick">kick</button>
 <button id="punch">punch</button>
-<script type="text/javascript " src="game.js "></script>
+<script type="text/javascript " src="index.js "></script>
 </body>
 
 </html>
